# RL-QuadcopterLanding

./: .gitignore  comandi.txt
Saves/: saved_weights
Saves/trained_model_actor/: keras_metadata.pb  saved_model.pb
Saves/trained_model_actor/variables/: variables.data-00000-of-00001  variables.index
Saves/trained_model_critic/: keras_metadata.pb  saved_model.pb
Saves/trained_model_critic/variables/: variables.data-00000-of-00001  variables.index
src/drone_plugins/: CMakeLists.txt  package.xml
src/drone_plugins/src/: contact_plugin.cc  drone_plugin.cc  laser_scan_plugin.cc  platform_plugin.cc  platform_plugin_1D.cc  platform_plugin_1D_moving.cc  platform_plugin_1D_stat.cc  platform_plugin_2D.cc  platform_plugin_2D_moving.cc  platform_plugin_2D_stat.cc  platform_plugin_stat.cc
src/drone_worker/: package.xml  setup.cfg  setup.py
src/drone_worker/config/: template.yaml
src/drone_worker/drone_worker/: base.py  gazebo_env.py  gazebo_env_1D.py  gazebo_env_2D.py  net_tester.py  pos_saver.py  save_node.py  worker.py
src/drone_worker/launch/: drone_tester.launch.py  drone_worker.launch.py
src/drone_worker/worlds/: quadcopter.world  quadcopter2.world  quadcopter_platf-2D_moving.world  quadcopter_platf-2D_stat.world  quadcopter_platf-3D_moving.world  quadcopter_platf-3D_stat.world  quadcopter_platf-moving_2D.world  (+2 more)
trained-models/PPO_4/: events.out.tfevents.1648740646.cronus.3551294.0
trained-models/save-1/: saved_weights
trained-models/save-2/: saved_weights
trained-models/save-3/: saved_weights
trained-models/save-4/: saved_reward
trained-models/save-5/: saved_reward
trained-models/save-6/: saved_reward
trained-models/test-2D-cont-2/: models.txt
trained-models/test-2D-cont-3/: models.txt
trained-models/test-2D-cont-4/: models.txt
trained-models/test-2D-nets/: models.txt
trained-models/test-new-plugin-multi-input/: models.txt
utils/: check_rollouts.py  create_sum_of_landed.py  create_sum_of_rollouts.py  libprotobuf.so.29.0.1  plot_pos_saved.py
(+159 files in other folders)
